Overflow: display is not a valid Overflow value, updated to overflow:visible in order to fix clipping of text.

--- a/app/assets/stylesheets/_vis.scss
+++ b/app/assets/stylesheets/_vis.scss
@@ -1,5 +1,5 @@
 #providerChart svg{
-  overflow: display;
+  overflow: visible;
   .node text{
     alignment-baseline: central;
   }
